--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,6 @@ management.endpoints.web.exposure.include=health, prometheus
 
 server.port=8989
 
-spring.r2dbc.password=Dea6l0ck@
-spring.r2dbc.url=r2dbc:pool:sqlserver://localhost:1433/deadlocks
 spring.r2dbc.username=sa
+spring.r2dbc.password=pAASword4
+spring.r2dbc.url=r2dbc:pool:sqlserver://localhost:1433/deadlocks
